# exath-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: dart-plugin.yml  release.yml
core/: Cargo.toml
core/src/: analysis.rs  angle_mode.rs  error.rs  interval.rs  lib.rs  matrix.rs  numerics.rs  rational.rs  symbolic.rs  units.rs
core/src/ast/: eval.rs  mod.rs  parser.rs  tokenizer.rs  types.rs  visitor.rs
core/src/evaluator/: calc_result.rs  cx.rs  factorial.rs  functions.rs  mod.rs  session.rs
core/tests/: cas_calculus_random.rs  cas_invariants.rs  verification.rs
dart/: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/android/: build.gradle
dart/example/: README.md  exath_example.dart  pubspec.yaml
dart/example/android/app/: build.gradle.kts
dart/example/android/app/src/main/: AndroidManifest.xml
dart/example/ios/Runner/: Info.plist
dart/example/ios/Runner.xcodeproj/: project.pbxproj
dart/example/lib/: main.dart
dart/example/linux/: CMakeLists.txt
dart/example/linux/flutter/: generated_plugins.cmake
dart/example/linux/runner/: my_application.cc
dart/example/macos/Runner.xcodeproj/: project.pbxproj
dart/example/macos/Runner/Configs/: AppInfo.xcconfig
dart/example/web/: index.html  manifest.json
dart/example/windows/: CMakeLists.txt
dart/example/windows/flutter/: generated_plugins.cmake
dart/example/windows/runner/: Runner.rc  main.cpp
dart/ios/: exath.podspec  exath_engine.podspec
dart/lib/: exath.dart
dart/lib/src/: exath_native.dart  exath_stub.dart  exath_web.dart  native_install.dart  types.dart  web_plugin.dart
dart/linux/: CMakeLists.txt
dart/macos/: exath.podspec  exath_engine.podspec
dart/tool/: fetch_native.dart  verify_package.dart
dart/windows/: CMakeLists.txt
examples/: demo.exath  demo.mjs
ffi-c/: Cargo.toml  README.md  cbindgen.toml
ffi-c/include/: exath_engine.h
ffi-c/src/: lib.rs
ffi-wasm/: Cargo.toml  README.md
ffi-wasm/src/: lib.rs
(+2 files in other folders)
