[package]
name = "exath-engine"
version = "1.0.0"
edition = "2021"
description = "Complex-native expression evaluator engine powering Exath calculator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fabian2000/exath-engine"
readme = "../README.md"
keywords = ["math", "calculator", "cas", "evaluator", "symbolic"]
categories = ["mathematics", "parser-implementations"]

[[bin]]
name = "exath"
path = "src/bin/exath.rs"

[dependencies]
