[package]
name = "exath-engine-ffi"
version = "0.1.0"
edition = "2021"
description = "C ABI bindings for the exath-engine expression evaluator"
license = "MIT"
repository = "https://github.com/Fabian2000/exath-engine"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
exath-engine = { path = "../core" }
