[package]
name = "exath-engine-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the exath-engine expression evaluator"
license = "MIT"
repository = "https://github.com/Fabian2000/exath-engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
exath-engine = { path = "../core" }
wasm-bindgen = "0.2"
