[package]
name = "exath-engine-wasm"
version = "1.0.0"
edition = "2021"
description = "WASM bindings for the exath-engine expression evaluator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fabian2000/exath-engine"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
exath-engine = { path = "../core" }
wasm-bindgen = "0.2"
